--- a/worker/jenkinsfile
+++ b/worker/jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
     post { 
         always {
             archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
-            echo 'Pipeline for worker is complete..'
+            echo 'Pipeline for worker is complete...'
         }
         failure {
             slackSend (channel: "instovate-cd", message: "Buil Failed" "Build Started - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
